# yahallo

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
pam/: Cargo.toml  build.rs
pam/src/: lib.rs  pam_handler.rs
res/: com.iamkroot.yahallo.conf  com.iamkroot.yahallo.service  yahallod.service
src/: _main.rs  camera.rs  config.rs  data.rs  lib.rs  main.rs  utils.rs
yahallo/: Cargo.toml
yahallo/src/: camera.rs  config.rs  data.rs  error.rs  image_utils.rs  lib.rs  utils.rs
