[workspace]
members = ["daemon", "cli", "yahallo", "pam"]
resolver = "2"

[workspace.dependencies]
image = "0.24.7"
clap = { version = "4", features = ["derive"] }
dlib-face-recognition = "0.3.2"
libc = "0.2.150"
anyhow = "1.0.75"
humantime = "2.1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
dbus = "0.9.7"
ort = "2.0.0-rc.9"

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3
