[package]
name = "yahallo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.4.0"
winit = "0.29.6"
yahallo = { path = "../yahallo" }
image = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
humantime = { workspace = true }
dlib-face-recognition = { workspace = true }

[[bin]]
name = "yahallo"
path = "src/main.rs"
