[package]
name = "yahallo-pam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pamsm = { version = "0.5.3", features = ["libpam"] }
dbus = { workspace = true }

[lib]
crate-type = ["cdylib"]
name = "yahallo"

