[package]
name = "yahallo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
anyhow = { workspace = true }
dlib-face-recognition = { workspace = true }
serde_json = "1.0.108"
rscam = "0.5.5"
log = { workspace = true }
